@@ -1,6 +1,7 @@
 This file documents the major additions and syntax changes between releases.
 
 1.4.14 ...
+	check_http has options to specify the HTTP method (#2155152)
 	check_users thresholds were not working excatly as documented (>= rather than >)
 	Updated tinderbox_build script to point to new tinderbox server
 	check_ifoperstatus -n flag now works as expected (sf.net #1569488)
